  output module. Callers get messages buffered to disk while 
  another goroutine consumes and forwards data. Any errors
  encountered can cause the sending goroutine to backoff and
  resend data.

* Added http_timeout to elasticsearch output to prevent slow or stale connections 
  from holding up the flow. (issue #769)

* Add query parameters to the Message as Fields in the HttpListenInput

0.5.2 (2014-MM-DD)
==================

Bug Handling
------------

* Terminated plugins are now removed from the SandboxManager quota (issue #774).

* Fixed SIGUSR1 triggered text report to stdout to work with updated
  heka.all-report JSON data structure (issue #762).

* MultiDecoder now uses message.GetType() instead of Message.Type so
  emitted message type will be generated correctly (issue #761).

* LogstreamerInput no longer causes Heka to fail to start on empty or
  whitespace-only journal files (issue #755).

* The cbufd_host_aggregator filter now properly reclaims expired hosts.

* Pull in a new lua_sandbox to fix JSON encoding of empty strings in the 
sandbox plugin output() call.

0.5.1 (2014-03-18)
==================

Bug Handling
------------

* Skip *.bak, *.tmp, *~, and .files in a config dir as a non-breaking band-aid
  until we require an explicit naming convention in 0.6 (see issue #750).

* heka-logstreamer command now supports config directories in addition to
  single config files, just like hekad itself (issue #742).

* Logstreamer package's NewLogstreamSet function no longer lowercases the
  match part names when constructing match translation maps since the
  PopulateMatchParts method doesn't actually expect the names to be
  lowercased.

* Added support for use of "missing" value in Logstreamer translation maps to
  allow users to place missing values at the end of the list instead of the
  beginning (issue #735).

0.5.0 (2014-03-06)
==================

Backwards Incompatibilities
---------------------------
